--- a/src/app/ui/pages/tab2/tab2.page.html
+++ b/src/app/ui/pages/tab2/tab2.page.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 2</ion-title>
