--- a/src/app/ui/pages/tabs/tabs.page.html
+++ b/src/app/ui/pages/tabs/tabs.page.html
@@ -1,8 +1,8 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
@@ -10,9 +10,19 @@
       <ion-label>Tab 2</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
+    <ion-tab-button tab="tab2">
+      <ion-icon name="flame-outline"></ion-icon>
       <ion-label>Tab 3</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab2">
+      <ion-icon name="person-outline"></ion-icon>
+      <ion-label>Tab 3</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab3">
+      <ion-icon name="cart-outline"></ion-icon>
+      <ion-label>Carrinho</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
